--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <div class="buttons">
              
 
-              <a href="Mahmoud_Elsaid_CV_.pdf" class="btn" target="_blank"> <i
+              <a href="Mahmoud Elsaid Frontend .pdf" class="btn" target="_blank"> <i
                   class="fa-solid fa-download"></i>Download CV</a>
               <div class="social-icons">
                 <a href="https://www.facebook.com/mahmoud.mohammed.29309" target="_blank"><i
